; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_objdump.c_dump_lines.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_objdump.c_dump_lines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.print_file_list = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.print_file_list*, i32, i32)* @dump_lines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dump_lines(%struct.print_file_list* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.print_file_list*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.print_file_list* %0, %struct.print_file_list** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.print_file_list*, %struct.print_file_list** %4, align 8
  %8 = getelementptr inbounds %struct.print_file_list, %struct.print_file_list* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %23

12:                                               ; preds = %3
  br label %13

13:                                               ; preds = %17, %12
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ule i32 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load %struct.print_file_list*, %struct.print_file_list** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @print_line(%struct.print_file_list* %18, i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = add i32 %21, 1
  store i32 %22, i32* %5, align 4
  br label %13

23:                                               ; preds = %11, %13
  ret void
}

declare dso_local i32 @print_line(%struct.print_file_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
